// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card with Header 1`] = `
.c0 {
  padding: .75rem 1.25rem;
  margin-bottom: 0;
  background-color: rgba(0,0,0,0.03);
  border-bottom: 1px solid rgba(0,0,0,0.125);
}

.c0:first-child {
  border-radius: (props = {}) =>(0,_lodash2.default)(props.theme,path,defaultValue), (props = {}) =>(0,_lodash2.default)(props.theme,path,defaultValue), 0, 0;
}

<div
  className="c0"
/>
`;

exports[`Card with Header 2`] = `
.c0 {
  padding: .75rem 1.25rem;
  border-top: 1px solid rgba(0,0,0,0.125);
}

.c0:last-child {
  border-radius: 0, 0, (props = {}) =>(0,_lodash2.default)(props.theme,path,defaultValue), (props = {}) =>(0,_lodash2.default)(props.theme,path,defaultValue);
}

<div
  className="c0"
/>
`;

exports[`With Image 1`] = `
.c0 {
  width: 100%;
}

<img
  className="c0"
/>
`;

exports[`With Image position bottom 1`] = `
.c0 {
  width: 100%;
}

<img
  className="c0"
/>
`;

exports[`create card 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: border-box;
  border: 1px solid rgba(0,0,0,0.125);
  border-radius: .25rem;
}

.c0 > hr {
  margin-right: 0;
  margin-left: 0;
}

<div
  className="c0"
/>
`;
